--- a/index.html
+++ b/index.html
@@ -551,11 +551,11 @@
                     <div class="portfolio-item portfolio-full">
                       <div class="portfolio-item-inner">
                         <a
-                          href="./assets/images/portfolio1.jpg"
+                          href="./assets/images/zad.png"
                           data-lightbox="example-1"
                         >
                           <img
-                            src="./assets/images/portfolio1.jpg"
+                            src="./assets/images/zad.png"
                             alt="Portfolio"
                           />
                         </a>
@@ -567,12 +567,12 @@
                         </ul>
                       </div>
                       <h2>
-                        <a href="">Bureau - Architecture Studio Website</a>
+                        <a href="">"ZAD" International Shipping Website</a>
                       </h2>
                     </div>
                   </div>
 
-                  <div
+                  <!-- <div
                     class="col-md-6 scroll-animation"
                     data-animation="fade_from_left"
                   >
@@ -633,7 +633,7 @@
                       </div>
                       <h2><a href="">Taskly Dashboard</a></h2>
                     </div>
-                  </div>
+                  </div> -->
 
                   <div
                     class="col-md-12 scroll-animation"
@@ -642,11 +642,11 @@
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
                         <a
-                          href="./assets/images/portfolio4.jpg"
+                          href="./assets/images/Mahallak.png"
                           data-lightbox="example-1"
                         >
                           <img
-                            src="./assets/images/portfolio4.jpg"
+                            src="./assets/images/Mahallak.png"
                             alt="portfolio"
                           />
                         </a>
@@ -655,13 +655,10 @@
                           <li>
                             <a href="">Figma</a>
                           </li>
-                          <li>
-                            <a href="">React</a>
-                          </li>
                         </ul>
                       </div>
                       <h2>
-                        <a href="">Hinterland - Real Estate Site Redesign</a>
+                        <a href="">"Mahallak" App (Clothing Store)</a>
                       </h2>
                     </div>
                   </div>
@@ -673,22 +670,22 @@
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
                         <a
-                          href="./assets/images/portfolio5.jpg"
+                          href="./assets/images/btd.png"
                           data-lightbox="example-1"
                         >
                           <img
-                            src="./assets/images/portfolio5.jpg"
+                            src="./assets/images/btd.png"
                             alt="portfolio"
                           />
                         </a>
 
                         <ul class="portfolio-categories">
                           <li>
-                            <a href="">Framer</a>
+                            <a href="">Figma</a>
                           </li>
                         </ul>
                       </div>
-                      <h2><a href="">Lewis Portfolio Framer Template</a></h2>
+                      <h2><a href="">btd </a></h2>
                     </div>
                   </div>
                 </div>
