--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="./assets/css/animate.min.css" />
     <link rel="stylesheet" href="./assets/css/smooth-scrollbar.css" />
-    <link rel="stylesheet" href="./assets/css/lightbox.min.css" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+    <link rel="stylesheet" href="./assets/css/portfolio-load-more.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
   <body class="home1-page">
      <!-- <video class="body-overlay" muted autoplay loop>
-<source src="./assets/images/video1.mp4" type="video/mp4">
+<source src="./assets/images/video4.mp4" type="video/mp4">
 </video> -->
 
     <!-- Preloader -->
@@ -103,7 +103,7 @@
               <a href="https://www.linkedin.com/in/muhammed-al-sheikh-819884338?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="lab la-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="https://share.google/a71NhmemjyUz7F3yK" target="_blank"><i class="lab la-behance"></i></a>
+              <a href="https://www.behance.net/mohammedsheikh12" target="_blank"><i class="lab la-behance"></i></a>
             </li>
             <li>
               <a href="https://www.instagram.com/m_a_sheikhh/" target="_blank"><i class="lab la-instagram"></i></a>
@@ -160,7 +160,7 @@
       <div
         class="sidebar-header d-flex align-items-center justify-content-between"
       >
-        <img src="./assets/images/logo.png" alt="Logo" />
+        <!-- <img id="Mohammedlogo" src="./assets/images/Mohammedlogo.png" alt="Logo" /> -->
         <span class="designation">UI UX Designer</span>
       </div>
       <img class="me" src="./assets/images/Mohammed.png" alt="Me" />
@@ -188,37 +188,34 @@
     <main class="drake-main">
       <div id="smooth-wrapper">
         <div id="smooth-content">
-          <div class="left-sidebar">
+          <!-- <div class="left-sidebar">
             <div
               class="sidebar-header d-flex align-items-center justify-content-between"
-            >
-              <img src="./assets/images/logo.png" alt="Logo" />
-              <span class="designation">Framer Designer & Developer</span>
-            </div>
-            <img class="me" src="./assets/images/me.jpg" alt="Me" />
-            <h2 class="email">hello@drake.design</h2>
-            <h2 class="address">Base in Los Angeles, CA</h2>
-            <p class="copyright">&copy; 2022 Drake. All Rights Reserved</p>
+            > -->
+              <!-- <img src="./assets/images/logo.png" alt="Logo" /> -->
+              <!-- <span class="designation">UI UX Designer</span> -->
+            <!-- </div>
+            <img class="me" src="./assets/images/Mohammed.png" alt="Me" />
+            <h2 class="email">hello@mohammed.design</h2>
+            <h2 class="address">Syria, Idlib, Harem</h2>
+            <p class="copyright">&copy; 2022 Mohammed. All Rights Reserved</p>
             <ul
               class="social-profile d-flex align-items-center flex-wrap justify-content-center"
             >
-              <li>
-                <a href=""><i class="lab la-twitter"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="lab la-dribbble"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="lab la-instagram"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="lab la-github"></i></a>
-              </li>
+               <li>
+          <a href="https://www.linkedin.com/in/muhammed-al-sheikh-819884338?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="lab la-linkedin-in"></i></a>
+        </li>
+        <li>
+          <a href="https://share.google/a71NhmemjyUz7F3yK" target="_blank"><i class="lab la-behance"></i></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/m_a_sheikhh/" target="_blank" ><i class="lab la-instagram"></i></a>
+        </li>
             </ul>
             <a href="#" class="theme-btn">
               <i class="las la-envelope"></i> Hire Me!
             </a>
-          </div>
+          </div> -->
 
           <!-- Hero Section -->
           <section class="hero-section page-section scroll-to-page" id="home">
@@ -550,10 +547,8 @@
                   >
                     <div class="portfolio-item portfolio-full">
                       <div class="portfolio-item-inner">
-                        <a
-                          href="./assets/images/zad.png"
-                          data-lightbox="example-1"
-                        >
+                        <a href="javascript:void(0);" class="portfolio-link" 
+                           data-images='["./assets/images/zad.png", "./assets/images/Mahallak.png", "./assets/images/Mohammed.png"]'>
                           <img
                             src="./assets/images/zad.png"
                             alt="Portfolio"
@@ -578,20 +573,12 @@
                   >
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
-                        <a
-                          href="./assets/images/portfolio2.jpg"
-                          data-lightbox="example-1"
-                        >
+                        <a href="#" class="portfolio-link">
                           <img
                             src="./assets/images/portfolio2.jpg"
                             alt="Portfolio"
                           />
                         </a>
-
-                        <img
-                          src="./assets/images/portfolio2.jpg"
-                          alt="Portfolio"
-                        />
 
                         <ul class="portfolio-categories">
                           <li>
@@ -641,10 +628,8 @@
                   >
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
-                        <a
-                          href="./assets/images/Mahallak.png"
-                          data-lightbox="example-1"
-                        >
+                        <a href="javascript:void(0);" class="portfolio-link"
+                           data-images='["./assets/images/Mahallak.png", "./assets/images/zad.png", "./assets/images/Mohammed.png"]'>
                           <img
                             src="./assets/images/Mahallak.png"
                             alt="portfolio"
@@ -663,16 +648,16 @@
                     </div>
                   </div>
 
+
+                  <!-- Start Project -->
                   <div
                     class="col-md-12 scroll-animation"
                     data-animation="fade_from_bottom"
                   >
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
-                        <a
-                          href="./assets/images/btd.png"
-                          data-lightbox="example-1"
-                        >
+                        <a href="javascript:void(0);" class="portfolio-link"
+                           data-images='["./assets/images/btd.png", "./assets/images/zad.png", "./assets/images/Mohammed.png"]'>
                           <img
                             src="./assets/images/btd.png"
                             alt="portfolio"
@@ -687,6 +672,43 @@
                       </div>
                       <h2><a href="">btd </a></h2>
                     </div>
+                  </div>
+                  <!-- End Project -->
+
+                  <!-- Start Project -->
+                  <div
+                    class="col-md-12 scroll-animation"
+                    data-animation="fade_from_bottom"
+                  >
+                    <div class="portfolio-item portfolio-half">
+                      <div class="portfolio-item-inner">
+                        <a href="javascript:void(0);" class="portfolio-link"
+                           data-images='["./assets/images/btd.png", "./assets/images/zad1.png", "./assets/images/Mohammed.png"]'>
+                          <img
+                            src="./assets/images/btd.png"
+                            alt="portfolio"
+                          />
+                        </a>
+
+                        <ul class="portfolio-categories">
+                          <li>
+                            <a href="">Figma</a>
+                          </li>
+                        </ul>
+                      </div>
+                      <h2><a href="">btd </a></h2>
+                    </div>
+                  </div>
+                  <!-- End Project -->
+
+                
+                  
+                  </div>
+                      <div class="load-more-btn scroll-animation" data-animation="fade_from_bottom">
+                    <button id="load-more-btn" class="theme-btn">
+                      <i class="las la-arrow-down"></i> Lode More
+                      <span class="projects-count">+3</span>
+                    </button>
                   </div>
                 </div>
               </div>
@@ -1120,9 +1142,10 @@
     <script src="./assets/js/gsap.min.js"></script>
     <script src="./assets/js/ScrollTrigger.min.js"></script>
     <script src="./assets/js/ScrollToPlugin.min.js"></script>
-    <script src="./assets/js/lightbox.min.js"></script>
-
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/ajax-form.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script src="./assets/js/portfolio-gallery.js"></script>
+    <script src="./assets/js/portfolio-load-more.js"></script>
   </body>
 </html>
