--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                   >
                     <div class="skill">
                       <div class="skill-inner">
-                        <img src="./assets/images/Figma.png" alt="Figma" />
+                        <img src="./assets/images/figma.png" alt="Figma" />
                         <h1 class="percent">95%</h1>
                       </div>
                       <p class="name">Figma</p>
