add img for mahallak project

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                     <div class="portfolio-item portfolio-half">
                       <div class="portfolio-item-inner">
                         <a href="javascript:void(0);" class="portfolio-link"
-                           data-images='["./assets/images/Mahallak.png", "./assets/images/zad.png", "./assets/images/Mohammed.png"]'>
+                           data-images='["./assets/images/mahallak1.png", "./assets/images/mahallak2.png", "./assets/images/mahallak3.png", "./assets/images/mahallak4.png"]'>
                           <img
                             src="./assets/images/Mahallak.png"
                             alt="portfolio"
