--- a/index.html
+++ b/index.html
@@ -700,14 +700,14 @@
                             alt="portfolio"
                           />
                           <div class="right">
-                            <h3>Paublo Dybala</h3>
+                            <h3>Abdulrahman Al-Hmeede</h3>
                             <p class="designation">
-                              CEO of <span>IBM Global</span>
+                              Frontend Developer at <span>Eh Mena</span>
                             </p>
                           </div>
                         </div>
                         <p>
-                          “هذا الرجل اسطوري”
+                          “Working with you was truly a great experience! Your creativity, attention to detail, and ability to bring ideas to life through clean and modern designs are impressive. You really know how to make a project stand out. Highly recommended!”
                         </p>
 
                         <a href="" class="project-btn">Project</a>
@@ -721,18 +721,16 @@
                             alt="portfolio"
                           />
                           <div class="right">
-                            <h3>Christina Morillo</h3>
+                            <h3>Molham Alnajar</h3>
                             <p class="designation">
-                              Product Management of
-                              <span>Invision App Inc</span>
+                              <span>UI UX Designer</span>
                             </p>
                           </div>
                         </div>
                         <p>
-                          “Drake was a real pleasure to work with and we look
-                          forward to working with him again. He's definitely the
-                          kind of designer that you can trust with any project
-                          from A-Z.”
+                          “Working with Mohammad was a game-changer for my app’s UI.
+His designs were clean, intuitive, and perfectly aligned with my brand vision.
+If you want a designer who truly gets user experience, he’s the one to call.”
                         </p>
 
                         <a href="" class="project-btn">Project</a>
@@ -746,16 +744,14 @@
                             alt="portfolio"
                           />
                           <div class="right">
-                            <h3>Phil Foden</h3>
+                            <h3>Khalil Abu Safuan</h3>
                             <p class="designation">
-                              Director of <span>Envato LLC</span>
+                              Product Manager
                             </p>
                           </div>
                         </div>
                         <p>
-                          “Extremely profressional and fast service!. Drake is a
-                          master of code and he also very creative. We done 3
-                          projects with him and certain will continue.”
+                          “As a product manager, I really enjoyed collaborating with you. You understand user needs perfectly and translate them into smooth, intuitive designs that fit the product vision. Your professionalism and problem-solving mindset made the whole process efficient and enjoyable.”
                         </p>
 
                         <a href="" class="project-btn">Project</a>
