--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                       <div class="testimonial-item-inner">
                         <div class="author d-flex align-items-center">
                           <img
-                            src="./assets/images/testimonial-1.jpg"
+                            src="./assets/images/abdulrahman.jpg"
                             alt="portfolio"
                           />
                           <div class="right">
@@ -717,7 +717,7 @@
                       <div class="testimonial-item-inner">
                         <div class="author d-flex align-items-center">
                           <img
-                            src="./assets/images/testimonial-2.jpg"
+                            src="./assets/images/molham.jpg"
                             alt="portfolio"
                           />
                           <div class="right">
@@ -740,7 +740,7 @@ If you want a designer who truly gets user experience, he’s the one to call
                       <div class="testimonial-item-inner">
                         <div class="author d-flex align-items-center">
                           <img
-                            src="./assets/images/testimonial-3.jpg"
+                            src="./assets/images/khalil.jpg"
                             alt="portfolio"
                           />
                           <div class="right">
