--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohammed</title>
+    <title>Mohammed Al Sheikh</title>
 
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
 
@@ -692,6 +692,30 @@
                   data-animation="fade_from_bottom"
                 >
                   <div class="owl-carousel testimonial-slider owl-theme">
+                    
+                    <div class="testimonial-item">
+                      <div class="testimonial-item-inner">
+                        <div class="author d-flex align-items-center">
+                          <img
+                            src="./assets/images/khalil.jpg"
+                            alt="portfolio"
+                          />
+                          <div class="right">
+                            <h3>Molham Alnajar</h3>
+                            <p class="designation">
+                              <span>UI UX Designer</span>
+                            </p>
+                          </div>
+                        </div>
+                        <p>
+                          “Working with Mohammad was a game-changer for my app’s UI.
+His designs were clean, intuitive, and perfectly aligned with my brand vision.
+If you want a designer who truly gets user experience, he’s the one to call.”
+                        </p>
+
+                        <a href="" class="project-btn">Project</a>
+                      </div>
+                    </div>
                     <div class="testimonial-item">
                       <div class="testimonial-item-inner">
                         <div class="author d-flex align-items-center">
@@ -718,29 +742,6 @@
                         <div class="author d-flex align-items-center">
                           <img
                             src="./assets/images/molham.jpg"
-                            alt="portfolio"
-                          />
-                          <div class="right">
-                            <h3>Molham Alnajar</h3>
-                            <p class="designation">
-                              <span>UI UX Designer</span>
-                            </p>
-                          </div>
-                        </div>
-                        <p>
-                          “Working with Mohammad was a game-changer for my app’s UI.
-His designs were clean, intuitive, and perfectly aligned with my brand vision.
-If you want a designer who truly gets user experience, he’s the one to call.”
-                        </p>
-
-                        <a href="" class="project-btn">Project</a>
-                      </div>
-                    </div>
-                    <div class="testimonial-item">
-                      <div class="testimonial-item-inner">
-                        <div class="author d-flex align-items-center">
-                          <img
-                            src="./assets/images/khalil.jpg"
                             alt="portfolio"
                           />
                           <div class="right">
