add project fondoq

--- a/index.html
+++ b/index.html
@@ -649,6 +649,34 @@
                   </div>
 
 
+
+                  <div
+                    class="col-md-12 scroll-animation"
+                    data-animation="fade_from_bottom"
+                  >
+                    <div class="portfolio-item portfolio-half">
+                      <div class="portfolio-item-inner">
+                        <a href="javascript:void(0);" class="portfolio-link"
+                           data-images='["./assets/images/fondoq1.jpg", "./assets/images/fondoq2.jpg", "./assets/images/fondoq3.jpg", "./assets/images/fondoq4.jpg" , "./assets/images/fondoq5.jpg", "./assets/images/fondoq6.jpg"]'>
+                          <img
+                            src="./assets/images/fondoq.png"
+                            alt="portfolio"
+                          />
+                        </a>
+
+                        <ul class="portfolio-categories">
+                          <li>
+                            <a href="">Figma</a>
+                          </li>
+                        </ul>
+                      </div>
+                      <h2>
+                        <a href="">"Mahallak" App (Clothing Store)</a>
+                      </h2>
+                    </div>
+                  </div>
+
+
                  
 
                   
