edit title project hotel

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                         </ul>
                       </div>
                       <h2>
-                        <a href="">"Mahallak" App (Clothing Store)</a>
+                        <a href="">Hotel booking platform 🩵</a>
                       </h2>
                     </div>
                   </div>
