--- a/index.html
+++ b/index.html
@@ -553,6 +553,10 @@
                             src="./assets/images/zad.png"
                             alt="Portfolio"
                           />
+                          <div class="portfolio-images-badge">
+                            <span class="badge-text">+3</span>
+                            <span class="badge-icon">📷</span>
+                          </div>
                         </a>
 
                         <ul class="portfolio-categories">
@@ -634,6 +638,10 @@
                             src="./assets/images/Mahallak.png"
                             alt="portfolio"
                           />
+                          <div class="portfolio-images-badge">
+                            <span class="badge-text">+3</span>
+                            <span class="badge-icon">📷</span>
+                          </div>
                         </a>
 
                         <ul class="portfolio-categories">
@@ -662,6 +670,10 @@
                             src="./assets/images/fondoq.png"
                             alt="portfolio"
                           />
+                          <div class="portfolio-images-badge">
+                            <span class="badge-text">+5</span>
+                            <span class="badge-icon">📷</span>
+                          </div>
                         </a>
 
                         <ul class="portfolio-categories">
